SERVER-97679: Only issue insert commands when there are documents to insert in QueryTester (#29648)

GitOrigin-RevId: 53d2d3336c04687ee240a7ac224ed0a1783ab28d